src/test/ui/async-await/no-move-across-await-struct.stderr
error[E0382]: use of moved value: `s.x`
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/no-move-across-await-struct.rs:10:5
=======
  --> $DIR/no-move-across-await-struct.rs:8:5
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL |     needs_vec(s.x).await;
   |               --- value moved here
LL |     s.x
   |     ^^^ value used here after move
   |
   = note: move occurs because `s.x` has type `std::vec::Vec<usize>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
